syntax = "proto3";

option go_package = "./;todolistProto";

package todolistProto;

service TodoListService{
    rpc SignIn(SignInRequest) returns (SignInReply){}
    rpc SignUp(SignUpRequest) returns (SignUpReply){}

    rpc UserInfo(UserInfoRequest) returns (UserInfoReply){}
    rpc Notification (NotificationRequest) returns (stream NotificationReply){}

}

message UserInfoRequest{

}

message UserInfoReply{
    string email = 1;
    string password = 2;
}

message SignInRequest{
    string email = 1;
    string password = 2;
}

message SignInReply{
    string token = 1;
}

message SignUpRequest{
    string email = 1;
}

message SignUpReply{
    string email = 1;
}

message NotificationRequest{
    int32 num = 1;
}

message NotificationReply{
    int32 num = 1;
}

message UploadRequest {
    int32 value = 1;
  }
  
message UploadReply {
    string message = 1;
}

message ChatRequest {
    string message = 1;
}

message ChatReply {
    string message = 1;
}